# whealth-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  etup.cfg  notepad  symptoms_export.csv  symptoms_export_cramps.csv
backend/: Dockerfile  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 9a76bf4d620e_create_core_tables.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/api/routes/: auth.py  exports.py  insights.py  symptoms.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: __init__.py  audit_log.py  export.py  symptom_entry.py  user.py
backend/app/schemas/: auth.py  insight.py  symptom.py
backend/app/services/: audit_logs.py  exports.py  insights.py  symptoms.py  users.py
backend/tests/: test_auth.py  test_health.py  test_insights.py  test_symptoms.py
backend/whealth_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: schema.md  spec.md
frontend/: package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  insights.ts  symptoms.ts
frontend/src/components/: Card.tsx  Chip.tsx  HeroBanner.tsx  SectionHeader.tsx  StatCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/layout/: AppSidebar.tsx  AppTopbar.tsx
frontend/src/pages/: CalendarPage.tsx  DashboardPage.tsx  InsightsPage.tsx  LogPage.tsx  LoginPage.tsx  RedirectPage.tsx  RegisterPage.tsx  TodayPage.tsx
frontend/src/routes/: AppRouter.tsx  ProtectedRoute.tsx
frontend/src/types/: auth.ts  insight.ts  symptom.ts
(+1 files in other folders)
